make some changes in flex-main-content label

--- a/HTML&CSS_Practical/flipcart.html
+++ b/HTML&CSS_Practical/flipcart.html
@@ -169,9 +169,9 @@
         <div class="main">
             <div class="main-content">
                 <div class="flex-main-content">
-                    <label for="dealsOfTheDay" style="font-size: x-large; color: black;">Deals Of Day </label>
-                    <label for="icon" style="margin-top: 10px;margin-right: 10px;"><i
-                            style="font-size:18px;color: grey;margin-left: 15px;" class="fa">&#xf017; </i>21 :
+                    <label for="dealsOfTheDay" class="mainDiscription">Deals Of Day </label>
+                    <label for="icon" class="sublabel" ><i
+                             class="fa">&#xf017; </i>21 :
                         18 : 56 Left</label>
                 </div>
                 <button class=" btn btn-primary float-end">View All</button></a>
@@ -308,12 +308,11 @@
         <div class="main">
             <div class="main-content">
                 <div class="flex-main-content-3">
-                    <label for="dealsOfTheDay" style="font-size: x-large;display: block;">Stylish Home Decor
+                    <label for="dealsOfTheDay" class="mainDiscription" >Stylish Home Decor
                     </label>
                     <label for="lowPrice" class="SubDiscription">Lowest Prices Ever</label>
                 </div>
                 <button class=" btn btn-primary float-end">View All</button></a>
-
             </div>
             <div class="main-content-2">
                 <div class="child">
