--- a/HTML&CSS_Practical/flipcart.html
+++ b/HTML&CSS_Practical/flipcart.html
@@ -6,22 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shooping Site For Mobiles, Electronics,Furniture,Grocery</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> -->
     <link rel="icon" type="image/x-icon" href="Images/flipcart.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -31,15 +19,12 @@
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="flipcart.css">
+    <script src="/js/script.js"></script>
 </head>
 
-<body onload="show()">
+<body>
     <div>
-
-
         <div class="main-1">
-
-
             <nav class="navbar bg-primary">
                 <div class="flex-container">
                     <div class="header">
@@ -57,108 +42,117 @@
                         </form>
                     </div>
                     <div class="loginDiv">
-                        <button type="submit">Login </button>
+                        <button type="submit" id="login" onclick="callToast()">Login </button>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">More <i class="fa fa-caret-down"></i></button>
-                        <div class="dropdown-content">
-                            <a href="#"><i class="fa fa-bell" style="color:rgb(8, 82, 253)"></i>Notification
+                        <div class="dropdown-content more-info">
+                            <a href="#"><i class="fa fa-bell"></i>Notification
                                 Preference</a>
-                            <a href="#"><i class="fa fa-question-circle" style="color:rgb(8, 82, 253)"></i>24x7 Customer
+                            <a href="#"><i class="fa fa-question-circle"></i>24x7 Customer
                                 care</a>
-                            <a href="#"><i class="fa fa-line-chart" style="color:rgb(8, 82, 253)"></i>Advertise</a>
-                            <a href="#"><i class="fa fa-download" style="color:rgb(8, 82, 253)"></i>Download App</a>
+                            <a href="#"><i class="fa fa-line-chart"></i>Advertise</a>
+                            <a href="#"><i class="fa fa-download"></i>Download App</a>
                         </div>
                     </div>
                     <div class="cart">
-
-                        <a href="#cart"><i class="fa fa-shopping-cart" style="font-size:18px;color:white"></i>Cart</a>
+                        <a href="#cart"><i class="fa fa-shopping-cart"></i>Cart</a>
                     </div>
 
                 </div>
             </nav>
-
+           
         </div>
-
+        <div class="wrapper" id="wrapper">
+            <div class="toast success">
+                <div class="container-1">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+                <div class="container-2">
+                   <p>You have logged in successfully.</p>
+                </div>
+                <button onclick="closetoast()">&times;</button>
+            </div>
+        </div>
         <div class="middel">
-            <div class="middel_element">
-                <a href="#topoffer"><img src="Images/Topoffers.jpg" alt="Topoffers" class="middel_images"></a>
-                <a href="3topoffer" class="description">Top Offer</a>
+            <div class="middel-element">
+                <a href="topOffer.html"><img src="Images/Topoffers.jpg" alt="Topoffers" class="middel_images"></a>
+                <a href="topOffer.html" class="description">Top Offer</a>
             </div>
-            <div class="middel_element">
-                <a href="#Tv&appliances"><img src="Images/tv&appliances.jpg" alt="Tv & appliances" class="middel_images"
-                        style="margin-left: 25px;"></a>
-                <a href="3topoffer" class="description" style="margin-right: 25px;">Tv & Appliacces</a>
+            <div class="middel-element">
+                <a href="tvAppliances.html"><img src="Images/tv&appliances.jpg" alt="Tv & appliances" class="middel_images"
+                        ></a>
+                <a href="tvAppliances.html" class="description">Tv & Appliacces</a>
             </div>
-            <div class="middel_element">
+            <div class="middel-element">
                 <a href="#"><img src="Images/electronics.jpg" alt="Flipkart Electronics" class="middel_images"></a>
                 <div class="dropdown">
                     <button class="dropbtn description"><span>Electronics</span> <i
                             class="fa fa-caret-down"></i></button>
                     <div class="dropdown-content">
-                        <a href="#">Electronic GSt Store</a>
-                        <a href="#"> Cameras & Accessories</a>
-                        <a href="#">Computer Peripherals</a>
-                        <a href="#">Laptop Accessories</a>
-                        <a href="#"> Gaming</a>
-                        <a href="#">Tablets</a>
+                        <a href="electronics.html">Electronic GSt Store</a>
+                        <a href="electronics.html"> Cameras & Accessories</a>
+                        <a href="electronics.html">Computer Peripherals</a>
+                        <a href="electronics.html">Laptop Accessories</a>
+                        <a href="electronics.html"> Gaming</a>
+                        <a href="electronics.html">Tablets</a>
                     </div>
                 </div>
             </div>
-            <div class="middel_element">
+            <div class="middel-element">
                 <a href="#"><img src="Images/fashion.jpg" alt="Flipkart Fashion" class="middel_images"></a>
                 <div class="dropdown">
                     <button class="dropbtn description"><span>Fashion</span>
                         <i class="fa fa-caret-down"></i></button>
                     <div class="dropdown-content">
-                        <a href="#">Men's Top wear</a>
-                        <a href="#">Men's Bottom wear</a>
-                        <a href="#">Men Footwear</a>
-                        <a href="#">Women Western</a>
-                        <a href="#">Womens Footwear</a>
-                        <a href="#">Kids</a>
+                        <a href="fashion.html">Men's Top wear</a>
+                        <a href="fashion.html">Men's Bottom wear</a>
+                        <a href="fashion.html">Men Footwear</a>
+                        <a href="fashion.html">Women Western</a>
+                        <a href="fashion.html">Womens Footwear</a>
+                        <a href="fashion.html">Kids</a>
                     </div>
                 </div>
             </div>
-            <div class="middel_element">
-                <a href="#Grocery"><img src="Images/grocery.jpg" alt="Grocery" class="middel_images"></a>
-                <a href="3topoffer" class="description">Grocery</a>
+            <div class="middel-element">
+                <a href="grocery.html"><img src="Images/grocery.jpg" alt="Grocery" class="middel_images"></a>
+                <a href="grocery.html" class="description">Grocery</a>
             </div>
-            <div class="middel_element">
-                <a href="#Flights"><img src="Images/travel.jpg" alt="Flights" class="middel_images"></a>
-                <a href="3topoffer" class="description">Travel</a>
+            <div class="middel-element">
+                <a href="flight.html"><img src="Images/travel.jpg" alt="Flights" class="middel_images"></a>
+                <a href="flight.html" class="description">Travel</a>
             </div>
-            <div class="middel_element">
+            <div class="middel-element">
                 <a href="#"><img src="Images/flipcartHome.jpg" alt="Flipkart Fashion" class="middel_images"></a>
                 <div class="dropdown">
                     <button class="dropbtn description"><span>Home</span> <i class="fa fa-caret-down"></i></button>
                     <div class="dropdown-content">
-                        <a href="#">Home Furnishing</a>
-                        <a href="#">Living room furniture</a>
-                        <a href="#">Home Decor</a>
-                        <a href="#">Kitchen & Dining</a>
-                        <a href="#">Tools & Utility</a>
-                        <a href="#">Kids Furniture</a>
+                        <a href="homeFurnishing.html">Home Furnishing</a>
+                        <a href="homeFurnishing.html">Living room furniture</a>
+                        <a href="homeFurnishing.html">Home Decor</a>
+                        <a href="homeFurnishing.html">Kitchen & Dining</a>
+                        <a href="homeFurnishing.html">Tools & Utility</a>
+                        <a href="homeFurnishing.html">Kids Furniture</a>
                     </div>
                 </div>
             </div>
-            <div class="middel_element">
-                <a href="#Mobile"><img src="Images/mobiles.jpg" alt="Mobile & Tablets" class="middel_images"
-                        style="margin-left: 25px;"></a>
-                <a href="3topoffer" class="description">Mobile & Tablets</a>
+            <div class="middel-element">
+                <a href="mobile-tab.html"><img src="Images/mobiles.jpg" alt="Mobile & Tablets" class="middel_images"
+                        ></a>
+                <a href="mobile-tab.html" class="description">Mobile & Tablets</a>
             </div>
-            <div class="middel_element">
+            <div class="middel-element">
                 <a href="#"><img src="Images/toysAndBeauty.jpg" alt="Toys and Beauty" class="middel_images"></a>
                 <div class="dropdown">
-                    <button class="dropbtn description"><span>Beauty</span>
+                    <button class="dropbtn description"><span>Beauty, Toys and more</span>
                         <i class="fa fa-caret-down"></i></button>
                     <div class="dropdown-content">
-                        <a href="#">Beauty & personal care</a>
-                        <a href="#"> Food & drinks</a>
-                        <a href="#">Baby care</a>
-                        <a href="#">Hair Care</a>
-                        <a href="#">Face Makeup</a>
-                        <a href="#">Top Brand Deals</a>
+                        <a href="beautyAndToys.html">Beauty & personal care</a>
+                        <a href="beautyAndToys.html"> Food & drinks</a>
+                        <a href="beautyAndToys.html">Baby care</a>
+                        <a href="beautyAndToys.html">Hair Care</a>
+                        <a href="beautyAndToys.html">Face Makeup</a>
+                        <a href="beautyAndToys.html">Top Brand Deals</a>
                     </div>
                 </div>
             </div>
@@ -353,7 +347,7 @@
                     <a href="#Showpieces" class="offer">Up to 70% off</a>
                     <a href="#Showpieces" class="description">Best Price Ever</a>
                 </div>
-                
+
             </div>
         </div>
     </div>
