--- a/HTML&CSS_Practical/electronics.html
+++ b/HTML&CSS_Practical/electronics.html
@@ -7,7 +7,7 @@
     <title>Electronics</title>
 </head>
 <body>
-    <img src="/Images//Camera.jpg" alt="Camera">
-    <img src="/Images/AppleiPads.jpg" alt="Apple iPad">
+    <img src="Images//Camera.jpg" alt="Camera">
+    <img src="Images/AppleiPads.jpg" alt="Apple iPad">
 </body>
 </html>
