--- a/HTML&CSS_Practical/fashion.html
+++ b/HTML&CSS_Practical/fashion.html
@@ -7,7 +7,7 @@
     <title>Fashion</title>
 </head>
 <body>
-    <img src="/Images/tShirt1.jpg" alt="Round White t-Shirt">
-    <img src="/Images/printedT-Shirt.jpg" alt="Printed t-Shirt">
+    <img src="Images/tShirt1.jpg" alt="Round White t-Shirt">
+    <img src="Images/printedT-Shirt.jpg" alt="Printed t-Shirt">
 </body>
 </html>
