--- a/HTML&CSS_Practical/flight.html
+++ b/HTML&CSS_Practical/flight.html
@@ -7,6 +7,6 @@
     <title>Flights - get exclusive offers</title>
 </head>
 <body>
-    <img src="/Images/travelImage.jpg" alt="flight discount">
+    <img src="Images/travelImage.jpg" alt="flight discount">
 </body>
 </html>
