--- a/HTML&CSS_Practical/grocery.html
+++ b/HTML&CSS_Practical/grocery.html
@@ -7,7 +7,7 @@
     <title>Grocery</title>
 </head>
 <body>
-    <img src="/Images/almonds.jpg" alt="Almonds">
-    <img src="/Images/rice.jpg" alt="Rice">
+    <img src="Images/almonds.jpg" alt="Almonds">
+    <img src="Images/rice.jpg" alt="Rice">
 </body>
 </html>
