--- a/HTML&CSS_Practical/homeFurnishing.html
+++ b/HTML&CSS_Practical/homeFurnishing.html
@@ -7,6 +7,6 @@
     <title>HomeFurnishing</title>
 </head>
 <body>
-    <img src="/Images/HomeFurnishing.jpg" alt="Home Furnishing">
+    <img src="Images/HomeFurnishing.jpg" alt="Home Furnishing">
 </body>
 </html>
