--- a/HTML&CSS_Practical/mobile-tab.html
+++ b/HTML&CSS_Practical/mobile-tab.html
@@ -7,6 +7,6 @@
     <title>Mobile and Tablets</title>
 </head>
 <body>
-    <img src="/Images/mobiles.jpg"  alt="Mobiles">
+    <img src="Images/mobiles.jpg"  alt="Mobiles">
 </body>
 </html>
