--- a/HTML&CSS_Practical/topOffer.html
+++ b/HTML&CSS_Practical/topOffer.html
@@ -7,7 +7,7 @@
     <title>Top Offers</title>
 </head>
 <body>
-    <img src="/Images/bestOffer.jpg" alt="Best Offer">
-    <img src="/Images/specialOffer.jpg" alt="Special Offer">
+    <img src="Images/bestOffer.jpg" alt="Best Offer">
+    <img src="Images/specialOffer.jpg" alt="Special Offer">
 </body>
 </html>
