--- a/HTML&CSS_Practical/tvAppliances.html
+++ b/HTML&CSS_Practical/tvAppliances.html
@@ -7,6 +7,6 @@
     <title>TV & Appliances</title>
 </head>
 <body>
-    <img src="/Images/samsuangTV.jpg" alt="Samsuang TV">
+    <img src="Images/samsuangTV.jpg" alt="Samsuang TV">
 </body>
 </html>
