--- a/HTML&CSS_Practical/beautyAndToys.html
+++ b/HTML&CSS_Practical/beautyAndToys.html
@@ -7,6 +7,6 @@
     <title>Beauty, Toys and more</title>
 </head>
 <body>
-    <img src="/Images/toys.jpg" alt="Toy image">
+    <img src="Images/toys.jpg" alt="Toy image">
 </body>
 </html>
