--- a/HTML&CSS_Practical/flipcart.html
+++ b/HTML&CSS_Practical/flipcart.html
@@ -19,7 +19,7 @@
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="flipcart.css">
-    <script src="/js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
